--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-openai==1.12.0
-httpx==0.25.2
-python-dotenv==1.0.0
-python-multipart==0.0.6
-sqlalchemy==2.0.35
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+openai>=1.12.0
+httpx>=0.25.2
+python-dotenv>=1.0.0
+python-multipart>=0.0.6
+sqlalchemy>=2.0.35
+Pillow>=10.4.0
+requests>=2.31.0
